@@ -8,6 +8,7 @@ Benjamin Peterson
 Floris Bruynooghe
 Jason R. Coombs
 Samuele Pedroni
+Brianna Laugher
 Carl Friedrich Bolz
 Armin Rigo
 Maho
