@@ -31,7 +31,7 @@ setenv=
     PYTHONDONTWRITEBYTECODE=1
 commands=
   py.test -n3 -rfsxX \
-        --junitxml={envlogdir}/junit-{envname}.xml []
+        --junitxml={envlogdir}/junit-{envname}.xml {posargs:testing}
 
 [testenv:trial]
 changedir=.
