@@ -1,6 +1,9 @@
 Changes between 2.3.5 and 2.4.DEV
 -----------------------------------
 
+- fix issue 308 - allow to mark/xfail/skip individual parameter sets
+  when parametrizing.  Thanks Brianna Laugher.
+
 - (experimental) allow fixture functions to be 
   implemented as context managers.  Thanks Andreas Pelme,
   Vladimir Keleshev. 
